modal overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,6 +45,7 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+    height: fit-content;
 }
 
 .mainroundimg{
